tests/ui/associated-type-bounds/const-projection-err.stock.stderr
error[E0271]: type mismatch resolving `<T as TraitWAssocConst>::A == 1`
  --> $DIR/const-projection-err.rs:14:11
   |
LL |     foo::<T>();
   |           ^ expected `1`, found `<T as TraitWAssocConst>::A`
   |
   = note: expected constant `1`
              found constant `<T as TraitWAssocConst>::A`
note: required by a bound in `foo`
  --> $DIR/const-projection-err.rs:11:28
   |
LL | fn foo<T: TraitWAssocConst<A = 1>>() {}
   |                            ^^^^^ required by this bound in `foo`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0271`.
